Clearer geom_pipe_virtual.toml

--- a/tests/testcfg/geom_pipe_virtual.toml
+++ b/tests/testcfg/geom_pipe_virtual.toml
@@ -9,7 +9,7 @@ threshold = 0.3
 
 [Voxels]
 upstream_mask = "Masks"
-upstream_colmap = "Masks"
+upstream_colmap = "Masks"  # not really but a task name is required here!
 camera_metadata = "camera"
 voxel_size = 0.1
 type = "carving"
