Update `romiseg` & Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -72,6 +72,7 @@ RUN cd plant-3d-vision/ && \
     python3 -m pip install --user plantdb/ && \
     python3 -m pip install --user -r romitask/requirements.txt && \
     python3 -m pip install --user romitask/ && \
+    python3 -m pip install --user torch==1.12.1+cu102 torchvision==0.13.1+cu102 --extra-index-url https://download.pytorch.org/whl/cu102 && \
     python3 -m pip install --user romiseg/ && \
     python3 -m pip install --user pybind11 && \
     python3 -m pip install --user romicgal/ && \
