--- a/docker/ippn_2023/Dockerfile
+++ b/docker/ippn_2023/Dockerfile
@@ -1,7 +1,7 @@
 FROM roboticsmicrofarms/plant-3d-vision
 LABEL maintainer="Jonathan LEGRAND <jonathan.legrand@ens-lyon.fr>"
 
-ARG HOST_DB_LOCATION
+ARG HOST_ROMI_DB
 ARG HOST_NOTEBOOK
 
 # Install the required dependencies, sub-modules and plant-3d-vision:
@@ -10,7 +10,7 @@ RUN python3 -m pip install --user notebook && \
     rm -rf .cache/pip
 
 # Copy the data files:
-COPY --chown=${USER_NAME} ${HOST_DB_LOCATION}/ ${DB_LOCATION}/
+COPY --chown=${USER_NAME} ${HOST_ROMI_DB}/ ${ROMI_DB}/
 # Copy the notebook files:
 COPY --chown=${USER_NAME} ${HOST_NOTEBOOK}/ notebooks/
 
