--- a/configs/geom_pipe_real.toml
+++ b/configs/geom_pipe_real.toml
@@ -7,7 +7,7 @@ compute_dense = false
 align_pcd = true
 use_gpu = true
 single_camera = true
-robust_alignment_max_error = 10
+alignment_max_error = 10
 distance_threshold = 5  # maximum allowed Euclidean distance from CNC pose
 # [Colmap.bounding_box]  # default to None
 # x = [150, 650]
