--- a/configs/ml_pipe_full.toml
+++ b/configs/ml_pipe_full.toml
@@ -13,7 +13,7 @@ calibration_scan_id = ""
   "--SiftMatching.use_gpu" = "1"
 
   [Colmap.cli_args.model_aligner]
-  "--robust_alignment_max_error" = "10"
+  "--alignment_max_error" = "10"
 
   # [Colmap.bounding_box] # default to None
   # x = [150, 650]
