--- a/configs/geom_pipe_virtual.toml
+++ b/configs/geom_pipe_virtual.toml
@@ -20,8 +20,16 @@ depth = 9  # depth parameter used by Open3D to mesh the point cloud
 [CurveSkeleton]
 upstream_task = "TriangleMesh"
 
-[TreeGraph]
+[RefineSkeleton]
 upstream_task = "CurveSkeleton"
+upstream_pcd = "PointCloud"
+alpha = 2.0
+beta = 2.0
+max_iterations = 100  # max number of iterations
+tolerance = 0.001
+
+[TreeGraph]
+upstream_task = "RefineSkeleton"
 z_axis = 2
 stem_axis_inverted = false
 
